--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
 
 [phantekzy@archlinux ~]$ fastfetch
 
-                   -\`                   phantekzy@archlinux
-                  .o+\`                  -------------------------------
-                 \`ooo/                  Full Name : Maini Lotfi Abdelkader
-                \`+oooo:                 Alias     : phantekzy
-               \`+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
+                   -`                   phantekzy@archlinux
+                  .o+`                  -------------------------------
+                 `ooo/                  Full Name : Maini Lotfi Abdelkader
+                `+oooo:                 Alias     : phantekzy
+               `+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
                -+oooooo+:               Age       : 28 (born 1996-09-08)
-             \`/:--:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
-            \`/++++/+++++++:             Status    : Currently exploring ArchLinux
-           \`/++++++++++++++:            WM        : Hyprland 
-          \`/+++ooooooooooooo/\`          Shell     : Zsh + Starship
-         ./ooosssso++osssssso+\`         Editor    : Neovim (Lua)
-        .oossssso-\`\`\`\`/ossssss+\`        Terminal  : Alacritty
+             `/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
+            `/++++/+++++++:             Status    : Currently exploring ArchLinux
+           `/++++++++++++++:            WM        : Hyprland 
+          `/+++ooooooooooooo/`          Shell     : Zsh + Starship
+         ./ooosssso++osssssso+`         Editor    : Neovim (Lua)
+        .oossssso-````/ossssss+`        Terminal  : Alacritty
        -osssssso.      :ssssssso.       Browser   : Firefox / W3M
       :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark
      /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
-   \`/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
-  \`+sso+:-\`                 \`.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
- \`++:.                           \`-/+/   
- .\`                                 \`
+   `/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
+  `+sso+:-`                 `.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
+ `++:.                           `-/+/   
+ .`                                 `
 
 [phantekzy@archlinux ~]$ cd ~/skills/dev_stack/
 
