--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
       overflow-y: scroll;
     }
 
-    #terminal {
+    #ascii-container {
+      display: flex;
       white-space: pre;
-      font-size: 16px;
-      line-height: 1.4;
+      gap: 40px;
+      font-size: 14px;
+      line-height: 1.3;
+      margin-bottom: 30px;
     }
 
-    #static-content {
-      white-space: pre;
-      font-size: 16px;
-      line-height: 1.4;
-      margin-bottom: 20px;
+    #terminal {
+      white-space: pre-wrap;
+      line-height: 1.5;
     }
 
     .typed-cursor {
@@ -41,19 +42,65 @@
 </head>
 <body>
 
-  <div id="static-content"></div>
+  <!-- Static Arch Logo + Info -->
+  <div id="ascii-container">
+    <div id="logo">
+      <pre>
+                   -`                   
+                  .o+`                  
+                 `ooo/                  
+                `+oooo:                 
+               `+oooooo:                
+               -+oooooo+:               
+             `/:-:++oooo+:              
+            `/++++/+++++++:             
+           `/++++++++++++++:            
+          `/+++ooooooooooooo/`          
+         ./ooosssso++osssssso+`         
+        .oossssso-````/ossssss+`        
+       -osssssso.      :ssssssso.       
+      :osssssss/        osssso+++.      
+     /ossssssss/        +ssssooo/-      
+   `/ossssso+/:-        -:/+osssso+-    
+  `+sso+:-`                 `.-/+oso:    
+ `++:.                           `-/+/   
+ .`                                      
+      </pre>
+    </div>
+    <div id="info">
+      <pre>
+phantekzy@archlinux
+-------------------------------
+Full Name : Maini Lotfi Abdelkader
+Alias     : phantekzy
+Location  : Bir Mourad Raïs, Algiers, Algeria
+Age       : 28 (born 1996-09-08)
+Role      : Elden Lord + Web Dev + CyberSec
+Status    : Currently exploring ArchLinux
+WM        : Hyprland 
+Shell     : Zsh + Starship
+Editor    : Neovim (Lua)
+Terminal  : Alacritty
+Browser   : Firefox / W3M
+Theme     : NerdFont + Gruvbox Dark
+Hobby     : AI, Linux, low-level code
+Fun Fact  : Dropped Civil Engineering for Code 
+Motto     : "Learn. Build. Play Dark Souls. Repeat."
+      </pre>
+    </div>
+  </div>
+
+  <!-- Typing area -->
   <div id="terminal"></div>
 
+  <!-- Typed.js -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     fetch("readme.txt")
       .then(response => response.text())
       .then(text => {
-        const [staticPart, typedPart] = text.split("[TYPING_START]");
-        document.getElementById("static-content").textContent = staticPart.trim();
-
         new Typed("#terminal", {
-          strings: [typedPart.trim()],
+          strings: [text],
           typeSpeed: 10,
           showCursor: true,
           cursorChar: "_",
