--- a/index.html
+++ b/index.html
@@ -46,54 +46,78 @@
   </style>
 </head>
 <body>
-  <div id="terminal"></div>
+  <div id="terminal">
+    <!-- Static ASCII Header + fastfetch inside pre -->
+    <pre>
+        __                          __             __                          
+       /\ \                        /\ \__         /\ \                         
+ _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \'/   ____    __  __    
+/\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
+\ \ \L\ \\ \ \ \ \/\ \L\.
+_ /\ \/\ \\ \ \_ /\  __/ \ \ \\\`\\/_/  /_\ \ \_\ \  
+ \ \ ,__/ \ \_\ \_\\ \__/.
+_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/\_/\/____/ `/___/> \
+   \ \_\                                                                 /\___/
+    \/_/                                                                 \/__/
+
+[phantekzy@archlinux ~]$ fastfetch
+
+                   -`                   phantekzy@archlinux
+                  .o+`                  -------------------------------
+                 `ooo/                  Full Name : Maini Lotfi Abdelkader
+                `+oooo:                 Alias     : phantekzy
+               `+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
+               -+oooooo+:               Age       : 28 (born 1996-09-08)
+             `/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
+            `/++++/+++++++:             Status    : Currently exploring ArchLinux
+           `/++++++++++++++:            WM        : Hyprland 
+          `/+++ooooooooooooo/`          Shell     : Zsh + Starship
+         ./ooosssso++osssssso+`         Editor    : Neovim (Lua)
+        .oossssso-````/ossssss+`        Terminal  : Alacritty
+       -osssssso.      :ssssssso.       Browser   : Firefox / W3M
+      :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark
+     /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
+   `/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
+  `+sso+:-`                 `.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
+ `++:.                           `-/+/   
+ .`                                 
+    </pre>
+  </div>
 
   <!-- Typed.js library -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     const terminal = document.getElementById('terminal');
     const lines = [
-      '[phantekzy@archlinux ~]$ fastfetch',
-      '',
-      '                   -`                   phantekzy@archlinux',
-      '                  .o+`                  -------------------------------',
-      '                 `ooo/                  Full Name : Maini Lotfi Abdelkader',
-      '                `+oooo:                 Alias     : phantekzy',
-      '               `+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria',
-      '               -+oooooo+:               Age       : 28 (born 1996-09-08)',
-      '             `/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec',
-      '            `/++++/+++++++:             Status    : Currently exploring ArchLinux',
-      '           `/++++++++++++++:            WM        : Hyprland',
-      '          `/+++ooooooooooooo/`          Shell     : Zsh + Starship',
-      '         ./ooosssso++osssssso+`         Editor    : Neovim (Lua)',
-      '        .oossssso-````/ossssss+`        Terminal  : Alacritty',
-      '       -osssssso.      :ssssssso.       Browser   : Firefox / W3M',
-      '      :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark',
-      '     /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code',
-      '   `/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code',
-      '  `+sso+:-`                 `.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."',
-      ' `++:.                           `-/+/',
-      ' .`                                 ',
       '',
       '[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/',
+      '',
       '[phantekzy@archlinux dev_stack]$ ls -la',
-      'HTML5  CSS3  JavaScript  PHP  Node.js  React  MySQL',
+      '',
+      '    HTML5      CSS3      JavaScript      PHP      Node.js      React      MySQL',
       '',
       '[phantekzy@archlinux ~]$ cd ~/socials/',
+      '',
       '[phantekzy@archlinux socials]$ curl -s linkedin.com/in/maini-lotfi | grep -i "Maini Lotfi"',
       '[ OK ] Loaded LinkedIn profile',
+      '',
       '[phantekzy@archlinux socials]$ curl -s x.com/mainilotfi | grep -i "Maini Lotfi"',
       '[ OK ] X feed found',
+      '',
       '[phantekzy@archlinux socials]$ curl -s youtube.com/@phantekzy | grep -i "phantekzy"',
       '[ OK ] YouTube channel detected',
+      '',
       '[phantekzy@archlinux socials]$ mail -s "Contact" mainilotfi@gmail.com',
       '[ INFO ] Opening email client...',
       '',
       '[phantekzy@archlinux ~]$ uname -a',
-      'Linux archlinux 6.9.6-arch1-1 x86_64 GNU/Linux',
+      '',
+      '    Linux archlinux 6.9.6-arch1-1 x86_64 GNU/Linux',
       '',
       '[phantekzy@archlinux ~]$ exit',
-      'logout',
+      '',
+      '    logout',
       '',
       '███████████ Process terminated successfully.',
       '',
@@ -120,7 +144,6 @@
       for (let i = 0; i < lines.length; i++) {
         await typeLine(lines[i]);
         await new Promise(r => setTimeout(r, 50));
-        // auto-scroll
         terminal.scrollTop = terminal.scrollHeight;
       }
       // Append a blinking cursor at end
